# rewind

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  LAUNCH.md  NAMING.md  ROADMAP.md  launch-copy.md
scripts/: generate_demo_assets.py  prep_demo.py  run_demo.py  smoke_test_pypi.py
src/rewind/: __init__.py  __main__.py  cc_setup.py  cli.py  config.py  sessions.py  version.py
src/rewind/analytics/: __init__.py  insights.py
src/rewind/capture/: __init__.py  hooks.py  payload.py  snapshot.py
src/rewind/export/: __init__.py  frames.py  privacy.py
src/rewind/rollback/: __init__.py  engine.py  safety.py
src/rewind/store/: __init__.py  blob.py  db.py  models.py
src/rewind/tui/: __init__.py  app.py  diff.py  timeline.py
tests/: conftest.py
tests/integration/: test_cli.py  test_full_session.py
tests/unit/: test_analytics.py  test_blob.py  test_cc_setup.py  test_cli_encoding.py  test_cli_self_command.py  test_config.py  test_db.py  test_export.py  test_hooks.py  test_models.py  test_payload.py  test_rollback.py  test_sessions.py  test_snapshot_classify.py  test_tui_render.py
